--- a/test/suite.html
+++ b/test/suite.html
@@ -7,12 +7,10 @@
   <link rel="stylesheet" href="vendor/qunit.css" type="text/css" media="screen">
   <script src="vendor/jquery-1.9.1.js"></script>
   <script src="vendor/qunit.js"></script>
-  <script src="vendor/coffee-script.js"></script>
 
-  <script type="text/coffeescript" src="../lib.js.coffee"></script>
+  <script src="../library.js"></script>
 
-  <script src="example.js"></script>
-  <script type="text/coffeescript" src="example_coffee.js.coffee"></script>
+  <script src="lib/example.js"></script>
 
 </head>
 <body>
