--- a/test/suite.html
+++ b/test/suite.html
@@ -4,17 +4,39 @@
   <meta charset="utf-8">
   <title>Test Suite</title>
 
-  <link rel="stylesheet" href="vendor/qunit.css" type="text/css" media="screen">
+  <link rel="stylesheet" href="vendor/jasmine.css" type="text/css" media="screen">
   <script src="vendor/jquery-1.9.1.js"></script>
-  <script src="vendor/qunit.js"></script>
+  <script src="vendor/jasmine.js"></script>
+  <script src="vendor/jasmine-html.js"></script>
 
+  <!-- include spec files here... -->
+  <script src="lib/specHelper.js"></script>
+  <script src="lib/librarySpec.js"></script>
+
+  <!-- include source files here... -->
   <script src="../library.js"></script>
 
-  <script src="lib/example.js"></script>
+  <script type="text/javascript">
+    (function() {
+      var jasmineEnv = jasmine.getEnv();
+      jasmineEnv.updateInterval = 1000;
+
+      var trivialReporter = new jasmine.TrivialReporter();
+
+      jasmineEnv.addReporter(trivialReporter);
+
+      jasmineEnv.specFilter = function(spec) {
+        return trivialReporter.specFilter(spec);
+      };
+
+      $(function(){
+        jasmineEnv.execute();
+      });
+
+    })();
+  </script>
 
 </head>
 <body>
-  <div id="qunit"></div>
-  <div id="qunit-fixture"></div>
 </body>
 </html>
